Changed AuthControllerTests and MenuItemControllerTests to use mockMvc, optimized all imports and rearranged code